Fix formatting/checkstyle, apply OpenRewrite, add CHANGELOG