@@ -1,33 +1,22 @@
 package org.jabref.model.groups;
 
-import java.util.Collection;
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import org.jabref.model.entry.Author;
-import org.jabref.model.entry.AuthorList;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.Date;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.StandardField;
-import org.jabref.model.strings.LatexToUnicodeAdapter;
 
-/**
- * Matches based on a latex free last name in a specified field. The field is parsed as an author list and the last names are resolved of latex.
- */
 public class DateGroup extends AbstractGroup {
 
-    private final Field field;
     String date; // bucket key: "YYYY" or "YYYY-MM" or "YYYY-MM-DD"
+    private final Field field;
 
     public DateGroup(String groupName, GroupHierarchyType context, Field searchField, String date) {
         super(groupName, context);
-        field=searchField;
+        field = searchField;
         this.date = date;
     }
-
-    
 
     static Optional<Integer> extractYear(Field field, BibEntry bibEntry) {
         return bibEntry.getField(field)
@@ -51,15 +40,23 @@ public class DateGroup extends AbstractGroup {
         }
     }
 
+    /**
+     * Returns a date group key from {@code d}.
+     * Format is inferred from {@code dateKeyFormat} by dash count: 0→YYYY, 1→YYYY-MM, 2→YYYY-MM-DD.
+     * If required parts are missing, returns {@link java.util.Optional#empty()}.
+     *
+     * @param d the parsed date
+     * @param dateKeyFormat sample format used only for its number of dashes
+     * @return optional key string in the requested granularity
+     */
     static Optional<String> getDateKey(Date d, String dateKeyFormat) {
         int numOfdashes = (int) dateKeyFormat.chars().filter(ch -> ch == '-').count();
-        // normalize parts
         Optional<Integer> y = d.getYear();
         return switch (numOfdashes) {
-            case 0 -> y.map(val -> String.format("%04d", val)); // "YYYY"
+            case 0 -> y.map(val -> "%04d".formatted(val)); // "YYYY"
             case 1 -> { // "YYYY-MM"
                 if (d.getYear().isPresent() && d.getMonth().isPresent()) {
-                    String out = String.format("%04d-%02d", d.getYear().get(), d.getMonth().get().getNumber());
+                    String out = "%04d-%02d".formatted(d.getYear().get(), d.getMonth().get().getNumber());
                     yield Optional.of(out);
                 } else {
                     yield Optional.empty();
@@ -67,7 +64,7 @@ public class DateGroup extends AbstractGroup {
             }
             case 2 -> { // "YYYY-MM-DD"
                 if (d.getYear().isPresent() && d.getMonth().isPresent() && d.getDay().isPresent()) {
-                    String out = String.format("%04d-%02d-%02d",
+                    String out = "%04d-%02d-%02d".formatted(
                             d.getYear().get(),
                             d.getMonth().get().getNumber(),
                             d.getDay().get());
@@ -79,7 +76,6 @@ public class DateGroup extends AbstractGroup {
             default -> Optional.empty();
         };
     }
-
 
     @Override
     public boolean contains(BibEntry entry) {
